# esp-tutorial

./: .gitignore
01-hello-world/: README.md
01-hello-world/hello_world/: CMakeLists.txt
01-hello-world/hello_world/main/: hello_world.c
02-esp-chip-info/chip_info/: CMakeLists.txt
02-esp-chip-info/chip_info/main/: CMakeLists.txt  chip_info.c
03-wifi-connect/: README.md
03-wifi-connect/wifi_connect/: CMakeLists.txt
03-wifi-connect/wifi_connect/main/: wifi_connect.c
04-tasks-and-mutex/: README.md
04-tasks-and-mutex/tasks_and_mutex/: CMakeLists.txt
04-tasks-and-mutex/tasks_and_mutex/main/: CMakeLists.txt  tasks_and_mutex.c
05-http-get/: README.md
05-http-get/http_get/: CMakeLists.txt
05-http-get/http_get/main/: CMakeLists.txt  http_get.c  http_utils.c  http_utils.h  wifi_utils.c  wifi_utils.h
06-aws-iot-core/: README.md
06-aws-iot-core/aws_iot/: CMakeLists.txt
06-aws-iot-core/aws_iot/main/: CMakeLists.txt  aws_iot.c
06-aws-iot-core/infra/: requirements.txt
07-blink/blink/: CMakeLists.txt
08-remote-control/: README.md
08-remote-control/infra/: Makefile  app.py
08-remote-control/remote_control/: CMakeLists.txt
09-dynamodb-telemetry/: README.md
09-dynamodb-telemetry/infra/: Makefile  app.py
09-dynamodb-telemetry/telemetry_task/: CMakeLists.txt
10-device-shadow/: README.md
10-device-shadow/device_shadow/: CMakeLists.txt
10-device-shadow/device_shadow/main/: CMakeLists.txt  device_shadow.c
11-wifi-provisioning/: README.md
11-wifi-provisioning/wifi_provisioning/: CMakeLists.txt  sdkconfig.defaults
(+19 files in other folders)
